# DeepSearchStack

./: .env.example  .gitignore  AGENTS.md  BOOTSTRAP_SNAPSHOT.md  COMPLETE-STACK-READY.md  DEEPSEARCH-COMPLETE.md  GEMINI.md  Makefile  Makefile.staging  README.md  settings.yml
benchmarks/base/: README.md  (+4 more)
docs/: BUILD_PLAN.md  CHANGELOG.md  QUICKSTART-DEEPSEARCH.md  README.md  ROADMAP.md  SESSION_MASTER_PROMPT.md  SESSION_PICKUP.md  TODO.md  VISION.md  cpp-microservice-template-guide.md  cpp-microservice-template.md  crawler-guide.md  deepsearch-implementation-summary.md  deepsearch-services.md
examples/: case_study_agent.py  crawler_example.py  deepsearch_example.py  query_llm.py
firefox-extension/: manifest.json
front/: index.html  package.json
infra/: docker-compose.core.yml  docker-compose.gemini.yml  docker-compose.light.yml  docker-compose.test.yml  docker-compose.trend-test.yml  docker-compose.viral-trend.yml  docker-compose.yml
scripts/: boiler-lab.py  boot_substrate.sh  client.py  dss-backup.py  dss-cleanup.py  dss-docs.py  dss-enrich.py  dss-health.sh  dss-smoke.py  dss-yt.py  dss.py  init_cpp_service.sh  test.sh  test_gateway.sh  test_suite.sh
sdk/: __init__.py  client.py
templates/cpp-microservice/: CMakeLists.txt
templates/cpp-microservice/include/: config_manager.h  database.h  http_server.h  microservice.h
templates/cpp-microservice/src/: config_manager.cpp  http_server.cpp  user_model.cpp
templates/cpp-microservice/tests/: test_microservice.cpp
testing/: Dockerfile  requirements.txt  test_api.py  test_integration.py  wait-for-it.sh
(+486 files in other folders)
